# Projekt-Astra-

./: README.md  Roadmap.md
ASTRA/: .gitignore  README.md  config.json  pyproject.toml  run_astra.bat  run_astra_gui.bat
ASTRA/.github/workflows/: tests.yml
ASTRA/docs/: CHANGELOG.md  JARVIS_TRANSPARENCY_LOG.md  LOCAL_CHAT_PROPOSAL.md  MANIFEST.md  PROJECT_STATE.md  ROADMAP.md  suggestions.md
ASTRA/src/: main.py
ASTRA/src/actions/: __init__.py  action_manager.py  system_action_manager.py
ASTRA/src/automation/: __init__.py  reminder_manager.py
ASTRA/src/commands/: action_command.py  base.py  code_command.py  diagnostics_command.py  exit_command.py  experience_command.py  export_command.py  fact_command.py  greeting_command.py  help_command.py  jarvis_command.py  learning_command.py  memory_command.py  model_command.py  reflection_command.py  registry.py  reminder_command.py  research_command.py  speech_command.py  system_action_command.py  vision_command.py  web_command.py
ASTRA/src/config/: config.py
ASTRA/src/core/: brain.py
ASTRA/src/dev/: __init__.py  code_inspector.py
ASTRA/tests/: conftest.py  test_actions.py  test_brain.py  test_code_command.py  test_config.py  test_experience.py  test_export_command.py  test_gui_presenter.py  test_jarvis_command.py  test_learning.py  test_logger.py  test_main.py  test_memory.py  test_model_command.py  test_modules.py  test_ollama_client.py  test_reflection.py  test_reminders.py  test_research_command.py  test_speech_vision.py  test_system_actions.py  test_time_format.py  test_update_checker.py  test_web_command.py
(+63 files in other folders)
