[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astra"
version = "0.0.16"
description = "Astra - a personal AI assistant, built from scratch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
astra = "main:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["commands", "config", "core", "memory", "modules", "utils"]
py-modules = ["main"]
