[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astra"
version = "0.0.18"
description = "Astra - a personal AI assistant, built from scratch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
astra = "main:main"
astra-gui = "gui.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["actions", "automation", "commands", "config", "core", "dev", "experience", "gui", "learning", "memory", "modules", "research", "speech", "utils", "vision"]
py-modules = ["main"]
